# CMakePractice

./: .gitignore
scons-demo/t1/: SConstruct  hello.c
scons-demo/t2/: SConstruct  hello.h
scons-demo/t3/: SConscript  SConstruct  hello.c
t1/: CMakeLists.txt  CmakeLists.txt  main.c
t1-homebrew/: CMakeLists.txt  main.cpp
t2/: CmakeLists.txt  Makefile
t2/doc/: hello.txt
t2/src/: CmakeLists.txt
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.c
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt  main.c
t5/: CMakeLists.txt  main.cpp
t5/CMakeModules/: Sanitizers.cmake
