CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT (HELLO)

IF(WIN32)
    # make the Release version create a PDB
    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Zi")
    # minimize the size or the resulting EXE
    SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /DEBUG /OPT:REF /OPT:ICF")
ENDIF()

SET(SRC_LIST main.c)
MESSAGE(STATUS "This is BINARY dir ${HELLO_BINARY_DIR}")
MESSAGE(STATUS "This is SOURCE dir ${HELLO_SOURCE_DIR}")
ADD_EXECUTABLE(hello ${SRC_LIST})
